# HIS-Agent

./: LICENSE  README.md  package-lock.json  package.json
.agents/skills/safe-universal-agent-workflow/: SKILL.md
asr_service/app/: model_runtime.py  websocket.py
backend/: .env.example  main.py  pyproject.toml
deploy/aliyun/: README.md  his-agent-asr.service  his-agent-backend.service  his-agent-llm-proxy.service  install.sh  nginx-his-agent.conf
deploy/modal/: README.md  diart_app.py
diarization_service/app/: main.py
diarization_service/app/providers/: base.py  diart_provider.py
docs/: DEMO.md  EVALUATION.md
docs/design/: AGENT_LOOP_ENGINEERING.md
docs/reports/: IMPLEMENTATION_REPORT.md
html/: patient-editor.html
loop-engineering/scripts/: run-case.mjs
scripts/: llm_openai_proxy.py
shared/: agent-task-orchestrator.js  agent-widget.js  runtime-config.js  voice-input-controller.js
tests/e2e/: his-agent.spec.ts
