[project]
name = "gui-agent-universal-backend"
version = "0.2.0"
description = "FastAPI backend for the GPT-5.5-powered HIS-Agent planner and semantic role mapper."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-dotenv",
  "requests",
]

[tool.uvicorn]
factory = false

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
